<resources>
    <string name="app_name">MovieLoop</string>

    <string name="popular">Popular</string>
    <string name="top_rated">Mejor Valoradas</string>
    <string name="upcoming">Próximamente</string>
    <string name="favoritas_text">Favoritas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enviar_critica">Enviar Crítica</string>
    <string name="favorite_text">Favorita</string>
    <string name="vista_text">Vista</string>
    <string name="pendiente_text">Pendiente</string>
    <string name="vistas_text">Vistas</string>
    <string name="pendientes_text">Pendientes</string>
    <string name="bienvenido_a_text">Bienvenido A</string>
    <string name="movieloop_text">MovieLoop</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="inicia_sesion_text">Inicia Sesión</string>
    <string name="o_registrate_text">O Regístrate</string>
    <string name="resumen_text">Resumen</string>
    <string name="equipo_destacado_text">Equipo Destacado</string>
    <string name="reparto_text">Reparto</string>
    <string name="infromacion_adicional_text">Infromación adicional</string>
    <string name="generos_text">Géneros</string>
    <string name="estado_text">Estado</string>
    <string name="lenguaje_original_text">Lenguaje Original</string>
    <string name="titulo_original_text">Título Original</string>
    <string name="duracion_text">Duración</string>
    <string name="presupuesto_text">Presupuesto</string>
    <string name="recaudacion_text">Recaudación</string>
    <string name="trailers_text">Trailers</string>
    <string name="reviews_text">Reviews</string>
    <string name="critica_la_pelicula_text">Critica la película</string>
    <string name="añadir_a_text">Añadir a:</string>
    <string name="cerrar_sesion_text">Cerrar Sesión</string>
    <string name="tus_votaciones_text">Tus Votaciones</string>
    <string name="user_votes_text">User Votes</string>
    <string name="tus_criticas_text">Tus críticas</string>
    <string name="tus_listas_text">Tus Listas</string>
    <string name="tu_viaje_comienza_en_text">Tu Viaje Comienza En</string>
    <string name="username_text">Username</string>
    <string name="repite_el_password_text">Repite el Password</string>
    <string name="registrate_text">Regístrate</string>
    <string name="ya_tienes_una_cuenta_text">Ya Tienes una Cuenta?</string>
    <string name="enviar_critica_text">Enviar Crítica</string>
    <string name="peliculas_text">Películas</string>
    <string name="no_ha_realizado_ninguna_critica_todavia_text">No ha realizado ninguna crítica todavía.</string>
    <string name="no_ha_realizado_ninguna_critica_todavia">No ha realizado ninguna crítica todavía.</string>
    <string name="resultado_de_peliculas_text">Resultado de Películas</string>
    <string name="no_se_han_econtrado_resultados_text">No se han econtrado resultados</string>
    <string name="resultado_de_series_text">Resultado de Series</string>
    <string name="series_text">Series</string>
    <string name="creada_por_text">Creada por</string>
    <string name="cadena_text">Cadena</string>
    <string name="numero_de_temporadas_text">Número de temporadas</string>
    <string name="critica_la_serie_text">Critica la serie</string>
    <string name="no_hay_series_en_esta_lista_text">No hay series en esta lista.</string>
    <string name="no_hay_pel_culas_en_esta_lista_text">No hay películas en esta lista.</string>
    <string name="no_ha_realizado_ningun_voto_todavia_text">No ha realizado ningun voto todavía.</string>
    <string name="muestrame_mas_text">Muéstrame más...</string>
    <string name="borra_esta_critica_text">Borrar crítica</string>
    <string name="tu_votacion_text">Tu votación:</string>
    <string name="tv_show_resource">tvShow</string>
    <string name="movie_resource">movie</string>
    <string name="int_busqueda">Introduce tu búsqueda...</string>
    <string name="query_resource">query</string>
    <string name="favorite_tv_show">FavoriteTVShow</string>
    <string name="watched_tv_show">WatchedTVShowList</string>
    <string name="watch_list_tv_show">WatchListTVShow</string>
    <string name="favorite_movie">FavoriteMovie</string>
    <string name="watched_movie">WatchedMovieList</string>
    <string name="watch_list_movie">WatchListMovie</string>
    <string name="review_conditions">La crítica no ha de estar vacía y tiene que tener un mínimo de 250 caracteres.</string>
    <string name="internet_condition">Por favor comprueba tu conexión a internet .</string>
    <string name="no_internet_conexion">No tienes conexión a Internet</string>
    <string name="wrong_mail_pwd">Email o Contraseña incorrectos</string>
    <string name="mail__pwd_empty">El email o el Password no pueden estar vacíos</string>
    <string name="show_more">Muéstrame más...</string>
    <string name="show_less">Muéstrame menos</string>
    <string name="mail_already_used">Ya hay una cuenta registrada con este email.</string>
    <string name="no_match_pwd">Las contraseañs no coinciden</string>
    <string name="pwd_condition">La contraseña no puede estar vacía o tener menos de 8 cáracteres.</string>
    <string name="username_not_valid">Username no válido</string>
    <string name="not_mail_valid">Mail no válido</string>
    <string name="make_your_vote">Realice su votación.</string>
    <string name="rating">Votación</string>
    <string name="reviewed_tv_show">Serie criticada</string>
    <string name="no_available">No disponible todavía.</string>

</resources>
