<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/peliculas_text" />

        <TextView
                android:id="@+id/noReviewMovieText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_ha_realizado_ninguna_critica_todavia_text"
                android:textAlignment="center"
                android:visibility="gone"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_marginLeft="50dp"/>

        <ListView
                android:id="@+id/reviewsUserFilm_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dip">
        </ListView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:text="@string/series_text" />

        <TextView
                android:id="@+id/noReviewTVShowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_ha_realizado_ninguna_critica_todavia"
                android:textAlignment="center"
                android:visibility="gone"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:layout_marginLeft="50dp"/>

        <ListView
                android:id="@+id/reviewsUserTVShow_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dip">
        </ListView>
    </LinearLayout>

</ScrollView>