<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:background="@color/black">


    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/caveat_bold"
            android:text="@string/tu_viaje_comienza_en_text"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/movieloop_text"
            android:textColor="@color/white"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:background="@drawable/bck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username_text"
                android:backgroundTint="#fff"
                android:foregroundTint="#fff"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:layout_marginTop="0dp"
                android:layout_alignParentTop="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/rel3"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rel1">

        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_text"
                android:backgroundTint="#fff"
                android:foregroundTint="#fff"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:layout_marginTop="0dp"
                android:layout_alignParentTop="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rel3">

        <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_text"
                android:backgroundTint="#fff"
                android:foregroundTint="#fff"
                android:inputType="textPassword"
                android:textAlignment="center" />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rel2">

        <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/repite_el_password_text"
                android:backgroundTint="#fff"
                android:foregroundTint="#fff"
                android:inputType="textPassword"
                android:textAlignment="center"
                />
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/btn1"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="@drawable/button_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rel2">

        <TextView
                android:id="@+id/signUp"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="12dp"
                android:text="@string/registrate_text"
                android:textAlignment="center"
                android:textColor="#fff"
                android:layout_marginTop="0dp"
                android:layout_alignParentTop="true"/>
    </RelativeLayout>

    <TextView
            android:id="@+id/goToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/ya_tienes_una_cuenta_text"
            android:clickable="true"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1"
            android:focusable="true"/>
</android.support.constraint.ConstraintLayout>