<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SearchFragment">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:layout_marginBottom="@dimen/simple8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="@dimen/simple8dp"
                android:layout_marginStart="@dimen/simple8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/simple8dp"
                android:layout_marginRight="@dimen/simple8dp"
                android:layout_marginTop="@dimen/simple8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.072">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/simple30dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/resultado_de_peliculas_text"
                    android:visibility="visible"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/searched_movies_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/simple5dp"/>

            <TextView
                    android:id="@+id/noResultFilm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_se_han_econtrado_resultados_text"
                    android:visibility="gone"
                    android:textAlignment="center"
                    android:paddingTop="@dimen/simple10dp"
                    android:paddingBottom="@dimen/simple5dp"
                    android:alpha="0.5"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/simple30dp"
                    android:gravity="center"
                    android:text="@string/resultado_de_series_text"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/searched_tvshows_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/noResultTV"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_se_han_econtrado_resultados_text"
                    android:visibility="gone"
                    android:paddingTop="@dimen/simple10dp"
                    android:paddingBottom="5dp"
                    android:alpha="0.5"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>



