<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="@dimen/simple50dp"
            android:layout_height="@dimen/simple50dp"
            android:id="@+id/favoriteTVShows"
            android:src="@drawable/icons8_star_filled_48"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/simple76dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/simple76dp"
            android:layout_marginTop="@dimen/simple280dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favoritas_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/simple76dp"
            android:layout_marginStart="@dimen/simple76dp"
            android:layout_marginTop="@dimen/simple8dp"
            app:layout_constraintTop_toBottomOf="@+id/favoriteTVShows"
            android:id="@+id/textView3"
            android:layout_marginBottom="@dimen/simple8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.049"/>

    <ImageView
            android:layout_width="@dimen/simple50dp"
            android:layout_height="@dimen/simple50dp"
            android:id="@+id/watchedTVShow"
            android:src="@drawable/icons8_eye_48_2"
            android:clickable="true"
            android:layout_marginTop="@dimen/simple280dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/favoriteTVShows"
            android:layout_marginStart="@dimen/simple44dp"
            android:layout_marginLeft="@dimen/simple44dp"
            android:focusable="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vistas_text"
            android:layout_marginTop="@dimen/simple8dp"
            app:layout_constraintTop_toBottomOf="@+id/watchedTVShow"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginLeft="@dimen/simple44dp"
            android:layout_marginStart="@dimen/simple44dp"
            android:id="@+id/textView4"
            android:layout_marginBottom="@dimen/simple8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.049"/>

    <ImageView
            android:layout_width="@dimen/simple50dp"
            android:layout_height="@dimen/simple50dp"
            android:id="@+id/TVShowsWatchList"
            android:src="@drawable/icons8_clock_filled_50"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/simple280dp"
            app:layout_constraintStart_toEndOf="@+id/watchedTVShow"
            android:layout_marginStart="@dimen/simple44dp"
            android:layout_marginLeft="@dimen/simple44dp"
            android:focusable="true"
            android:layout_marginEnd="@dimen/simple8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/simple8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pendientes_text"
            android:layout_marginTop="@dimen/simple8dp"
            app:layout_constraintTop_toBottomOf="@+id/TVShowsWatchList"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginLeft="@dimen/simple40dp"
            android:layout_marginStart="@dimen/simple40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/simple8dp"
            android:layout_marginRight="@dimen/simple8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="@dimen/simple8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.049"/>

</android.support.constraint.ConstraintLayout>